  * find: Rather than only showing files whose contents are present,
    when used with --exclude --copies or --in, displays all files that
    match the specified conditions.
  * Note that this is a behavior change for git-annex find! Old behavior
    can be gotten by using: git-annex find --in .
  * status: Massively sped up; remove --fast mode.

 -- Joey Hess <joeyh@debian.org>  Sun, 18 Sep 2011 18:25:51 -0400

git-annex (3.20110915) unstable; urgency=low

  * whereis: Show untrusted locations separately and do not include in
    location count.
  * Fix build without S3.
  * addurl: Always use whole url as destination filename, rather than
    only its file component.
  * get, drop, copy: Added --auto option, which decides whether
    to get/drop content as needed to work toward the configured numcopies.
  * bugfix: drop and fsck did not honor --exclude

 -- Joey Hess <joeyh@debian.org>  Thu, 15 Sep 2011 22:25:46 -0400

git-annex (3.20110906) unstable; urgency=low

  * Improve display of newlines around error and warning messages.
  * Fix Makefile to work with cabal again.

 -- Joey Hess <joeyh@debian.org>  Tue, 06 Sep 2011 13:45:16 -0400

git-annex (3.20110902) unstable; urgency=low

  * Set EMAIL when running test suite so that git does not need to be
    configured first. Closes: #638998
  * The wget command will now be used in preference to curl, if available.
  * init: Make description an optional parameter.
  * unused, status: Sped up by avoiding unnecessary stats of annexed files.
  * unused --remote: Reduced memory use to 1/4th what was used before.
  * Add --json switch, to produce machine-consumable output.

 -- Joey Hess <joeyh@debian.org>  Fri, 02 Sep 2011 21:20:37 -0400

git-annex (3.20110819) unstable; urgency=low

  * Now "git annex init" only has to be run once, when a git repository
    is first being created. Clones will automatically notice that git-annex
    is in use and automatically perform a basic initalization. It's